# jax-template

./: .gitignore  README.md  environment.yml  eval.py  macos.yml  pyproject.toml  train.py
configs/: config.yaml
configs/data/: template.yaml
core/: callback.py  checkpoint.py  data.py  dataloader.py  model.py  trainer.py
data/: __init__.py
data/mnist/: mnist.py
data/template/: datamodule.py
models/: __init__.py  classifier.py  template_model.py
models/networks/: template_network.py
utils/: helpers.py
