[project]
name = "jax-template"
version = "0.1.0"
description = "A JAX/Flax machine learning project template"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jax==0.4.35 ; sys_platform == 'darwin'",
    "jax ; sys_platform != 'darwin'",
    "jaxlib==0.4.35 ; sys_platform == 'darwin'",
    "jaxlib ; sys_platform != 'darwin'",
    "flax",
    "optax",
    "orbax-checkpoint==0.10.3 ; sys_platform == 'darwin'",
    "orbax-checkpoint ; sys_platform != 'darwin'",
    "hydra-core",
    "wandb",
    "tensorboard",
    "tensorboardX",
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "tqdm",
    "grain",
    "jax-metal==0.1.1 ; sys_platform == 'darwin'",
]

[dependency-groups]
dev = [
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
